# products-api

./: Dockerfile  dependencies.py  docker-compose.yml  main.py  pyproject.toml
dto/: __init__.py
schema/: __init__.py
